2001-03-30  Christoph Pfisterer  <cp@chrisp.de>

	* FinkVersion.pm: Bumped version number to 0.1.7.

2001-03-28  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_install): Removes build dir after
	successful build unless KeepBuildDir is set in the configuration.
	* FinkVersion.pm: Set version number to "post-0.1.6".

2001-03-21  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (real_install): Added check to catch unknown packages
	that are mentioned in a dependency list.

2001-03-08  Christoph Pfisterer  <cp@chrisp.de>

	* FinkVersion.pm: Bumped version number to 0.1.6.

	* Bootstrap.pm (choose_mirrors): Read mirror list from a file
	instead of just using all files in the directory.

2001-03-05  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: added support for bundle packages (no source,
	only dependecies).

2001-03-04  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: added code to disable the defaults for
	environment variables (e.g. NoSetCPPFLAGS: true).

2001-03-01  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: added support for multiple tarballs per package.

2001-02-24  Christoph Pfisterer  <cp@chrisp.de>

	* FinkVersion.pm: new module for storing the version number.

2001-02-18  Christoph Pfisterer  <cp@chrisp.de>

	* Released version 0.1.5. Started using CVS and ChangeLogs.
