@@ -1,3 +1,7 @@
+2001-04-03  Christoph Pfisterer  <cp@chrisp.de>
+
+	* Package.pm: New function list_essential_packages.
+
 2001-03-30  Christoph Pfisterer  <cp@chrisp.de>
 
 	* FinkVersion.pm: Bumped version number to 0.1.7.
